# learning-opengl

./: .gitignore  CMakeLists.txt  LearningOpenGLConfig.h.in  Readme.md  main.cpp
basics/: .gitignore  CMakeLists.txt
basics/rectangle/: CMakeLists.txt  rectangle.cpp
basics/shaders/: texturing.fs.glsl  texturing.vs.glsl  transformation.vs.glsl
basics/texturing/: CMakeLists.txt  texturing.cpp
basics/transforamtions/: CMakeLists.txt  coordinate_systems.cpp  transformations.cpp
cmake/modules/: FindGLFW3.cmake  FindGLM.cmake
creating-window/: CMakeLists.txt  creating-window.cpp
examples/: CMakeLists.txt  loadExamples.cmake
examples/box_gif/: CMakeLists.txt  box_gif.cpp
examples/cylinder/: CMakeLists.txt  cylinder.cpp
examples/metaballs/: Isosurface.cpp  Isosurface.h  LookupTable.h  metaballs.cpp
examples/shaders/: cylinder.fs.glsl  cylinder.vs.glsl  flatColor.fs.glsl  flatColor.vs.glsl  phong_view.fs.glsl
examples/test/: CMakeLists.txt  test.cpp
external-dependencies/: setup_libraries.cmake
external-dependencies/include/glad/: glad.h
external-dependencies/include/stb_image/: stb_image.h
external-dependencies/lib/: glfw3.lib
external-dependencies/src/: glad.c  stb_image.cpp
include/: Camera.h  Shader.h
lighting/: CMakeLists.txt
lighting/models/: CMakeLists.txt  gourard.cpp  phong.cpp  phong_model.cpp  phong_view.cpp
lighting/multiple_lights/: CMakeLists.txt  multiple_lights.cpp
lighting/shaders/: box.fs.glsl  box.vs.glsl  gourard.fs.glsl  gourard.vs.glsl  light.fs.glsl  light.vs.glsl  phong_model.fs.glsl  phong_model.vs.glsl  phong_view.fs.glsl  phong_view.vs.glsl
rectangle/: CMakeLists.txt  rectangle.cpp
shaders/: rectangle.fs.glsl  rectangle.vs.glsl  triangle.vs.glsl
src/: Camera.cpp  Shader.cpp
tests/: CMakeLists.txt
tests/external-libraries/: CMakeLists.txt  test_glfw3.cpp  test_glm.cpp  test_stb_image.cpp
tests/external_libraries/: CMakeLists.txt
tests/general/: CMakeLists.txt  test_OpenGLApp.cpp
triangle/: CMakeLists.txt  triangle.cpp
utility/: utility.cmake
utility/include/: Box.h  Camera.h  Cylinder.h  Material.h  OpenGLApp.h  Shader.h  Transform.h  Window.h
utility/src/: Box.cpp  Camera.cpp  ConfigFile.cpp  ConfigFile.h  Material.cpp  OpenGLApp.cpp  Shader.cpp  Window.cpp
